# dev

./: .gitignore  Dockerfile  README.md  custom_example.env  dev_example.env
blueprints/cpp/: CMakeUserPresets_example.json
blueprints/cpp/src/: CMakeLists.txt  cmdevConfig.cmake.in
blueprints/cpp/src/app_lib/: app_lib.h
blueprints/cpp_blueprint/: CMakeLists.txt
blueprints/cpp_blueprint/src/app_lib/: CMakeLists.txt
blueprints/cpp_blueprint_lite/: CMakePresets.json  CMakeUserPresets_example.json
blueprints/cpp_blueprint_lite/src/app_cli/: CMakeLists.txt
blueprints/cpp_lite/src/app_cli/: app_cli.cpp
blueprints/cpp_lite/src/app_lib/: app_lib.cpp
blueprints/cpp_lite/test/: CMakeLists.txt  app_test.cpp
blueprints/go/: Makefile  chatbot
blueprints/rust/: Cargo.toml  Makefile
config/: bashrc  init.lua  shell_functions  zshrc
scripts/: blpt.py  dev.py  dkr.py  setup.py
scripts/blptcmd/: __init__.py  config.py  create.py  help.py  info.py  list.py  utils.py
scripts/devcmd/: __init__.py  build.py  config.py  container.py  help.py  maintenance.py  shell.py  utils.py
scripts/dkrcmd/: __init__.py  build.py  config.py  help.py  logs.py  rm.py  rmi.py  run.py  shell.py  status.py  stop.py  utils.py
tools/srv/: Cargo.toml
tools/srv/src/: config.rs  main.rs  sample.srv.toml  server.rs  utils.rs
tools/srv/tests/: integration_test.rs
web/: index.html
web/css/: matrix.css
web/js/: main.js
